fix: swap mobile brand stone in dark mode

--- a/seki-web/static/css/base.css
+++ b/seki-web/static/css/base.css
@@ -229,8 +229,16 @@ nav {
 }
 
 .brand-stone {
+  display: inline-block;
   width: 1.25em;
   height: 1.25em;
+  background-image: url("/static/images/stone_black.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+:root[data-theme="dark"] .mobile-nav-brand .brand-stone {
+  background-image: url("/static/images/stone_white.svg");
 }
 
 .nav-actions {
